# Team10_RM

./: README.md  report.txt
player_pkg/: CMakeLists.txt  package.xml
player_pkg/config/: params.yaml
player_pkg/launch/: player.launch.py  shooter_node.launch.py  vision_node.launch.py
player_pkg/models/: classes.txt
player_pkg/results/armor/: TEAMENAME_results.json  TEAMENAME_results.json.sha256
player_pkg/results/rectangle/: TEAMENAME_results.json  TEAMENAME_results.json.sha256
player_pkg/results/sphere/: TEAMENAME_results.json  TEAMENAME_results.json.sha256
player_pkg/scripts/: prepare_dataset.py  train_simple.py
player_pkg/scripts/armor_dataset_realtime/labels/: armor_0.txt  armor_12.txt  armor_13.txt  armor_14.txt  armor_18.txt  armor_2.txt  armor_22.txt  armor_23.txt  armor_24.txt  armor_26.txt  armor_28.txt  armor_29.txt  armor_3.txt  armor_31.txt  armor_32.txt  armor_33.txt  armor_34.txt  armor_35.txt  armor_36.txt  armor_37.txt  armor_38.txt  armor_39.txt  armor_5.txt  armor_7.txt  armor_8.txt  auto_armor_1.txt  auto_armor_101.txt  auto_armor_102.txt  auto_armor_106.txt  auto_armor_113.txt  auto_armor_115.txt  auto_armor_116.txt  auto_armor_118.txt  auto_armor_119.txt  auto_armor_120.txt  auto_armor_121.txt  auto_armor_122.txt  auto_armor_123.txt  auto_armor_124.txt  auto_armor_125.txt  (+278 more)
player_pkg/scripts/armor_yolo_dataset/: armor_dataset.yaml
player_pkg/scripts/armor_yolo_dataset/labels/: train.cache  val.cache
player_pkg/scripts/armor_yolo_dataset/labels/train/: armor_10.txt  armor_11.txt  armor_16.txt  armor_17.txt  armor_19.txt  armor_20.txt  armor_21.txt  armor_27.txt  armor_30.txt  armor_4.txt  armor_40.txt  armor_41.txt  armor_42.txt  armor_6.txt  armor_9.txt  auto_armor_0.txt  auto_armor_10.txt  auto_armor_103.txt  auto_armor_104.txt  auto_armor_105.txt  auto_armor_109.txt  auto_armor_11.txt  auto_armor_110.txt  auto_armor_114.txt  auto_armor_117.txt  auto_armor_12.txt  auto_armor_126.txt  auto_armor_13.txt  auto_armor_133.txt  auto_armor_134.txt  auto_armor_135.txt  auto_armor_137.txt  auto_armor_14.txt  auto_armor_140.txt  auto_armor_141.txt  auto_armor_144.txt  auto_armor_146.txt  auto_armor_149.txt  auto_armor_150.txt  auto_armor_153.txt  (+204 more)
player_pkg/scripts/armor_yolo_dataset/labels/val/: armor_15.txt  armor_25.txt  auto_armor_100.txt  auto_armor_107.txt  auto_armor_108.txt  auto_armor_112.txt  auto_armor_131.txt  auto_armor_148.txt  auto_armor_154.txt  auto_armor_159.txt  auto_armor_171.txt  auto_armor_179.txt  auto_armor_180.txt  auto_armor_185.txt  auto_armor_2.txt  auto_armor_205.txt  auto_armor_212.txt  auto_armor_225.txt  auto_armor_34.txt  (+48 more)
player_pkg/src/: shooter_node.cpp  training_node.cpp  vision_node.cpp
(+8 files in other folders)
